--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   share_plus: ^9.0.0
   file_picker: ^8.0.0
   flutter_slidable: ^3.0.0
+  flutter_displaymode: ^0.6.0
 
 dev_dependencies:
   flutter_test:
