--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   flutter_slidable: ^4.0.3
   permission_handler: ^12.0.1
   android_intent_plus: ^6.0.0
-  open_file: ^3.5.4
+  open_file: ^3.3.2
+  open_file_macos: any
+
 
 dev_dependencies:
   flutter_test:
