feat: Initialize core application structure, services, UI components, and default category configuration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   android_intent_plus: ^6.0.0
   open_file: ^3.3.2
   open_file_macos: any
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
