--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,10 @@ jobs:
             - name: Install Dependencies
               run: flutter pub get
 
+            - name: Configure Gradle Memory
+              run: |
+                  echo "org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m" > android/gradle.properties
+
             - name: Build APK
               run: flutter build apk --release
 
