--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,9 +37,12 @@ jobs:
             - name: Build APK
               run: flutter build apk --release
 
+            - name: Rename APK
+              run: mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/device-manage-release.apk
+
             - name: Create Release
               uses: softprops/action-gh-release@v2
               if: startsWith(github.ref, 'refs/tags/')
               with:
-                  files: build/app/outputs/flutter-apk/app-release.apk
+                  files: build/app/outputs/flutter-apk/device-manage-release.apk
                   generate_release_notes: true
