--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   open_file: ^3.3.2
   open_file_macos: any
   shared_preferences: ^2.5.3
+  material_design_icons_flutter: ^7.0.7296
 
 
 dev_dependencies:
